# python-boilerplate

./: .flake8  README.md  lint.sh  mypy.ini  pyproject.toml  requirements_dev.txt
.github/workflows/: ci.yml
tests/: sample_test.py
