[build-system]
requires = ["setuptools"]

[project]
name = "my_package"
version = "0.0.1"
description = "My Package"
authors = [
     {name = "Author", email = "author@example.com"},
]
dynamic = ["readme"]
dependencies = [
    # Put dependencies here.
]

[tool.setuptools.dynamic]
readme = {file=["README.md"], content-type="text/markdown"}


[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "pep8-naming",
    "mypy",
    "pytest",
    "pytest-timeout",
    "isort",
]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
exclude = ''

[tool.pytest.ini_options]
timeout = 60
testpaths = ["tests"]
markers = []

[tool.isort]
profile = "black"
known_first_party = ["my_package"]
known_third_party = ["ray", "torch"]
